infra/k8s/chat/001-synapse/003-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: matrixorg
spec:
  selector:
    service: postgres
  ports:
    - name: client
      protocol: TCP
      port: 5432
      targetPort: 5432
