infra/k8s/chat/001-synapse/007-synapse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrixorg
spec:
  selector:
    service: synapse
  ports:
    - name: client
      protocol: TCP
      port: 8448
      targetPort: 8448
      #  externalIPs:
      #    - 192.168.3.100
